--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </svg>
     </div>
     
-    <a href="/cart.html">
+    <a href="./cart.html">
     <div class="cart">
      
       <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="white" class="bi bi-cart2" viewBox="0 0 16 16">
